alignment fix

--- a/src/app/confirmation-delete-status/confirmation-delete-status.component.css
+++ b/src/app/confirmation-delete-status/confirmation-delete-status.component.css
@@ -1,15 +1,4 @@
-#status-select{
-  left: 200px;
-}
-
 #status{
-  left: 200px;
+margin-left:20px;
 }
- mat-form-field{
-   left: 200px;
- }
- mat-select{
-   left: 200px;
- }
-
 
